Applied styling to CSS rule ModalCustBtnD:margin-right5rem. This rectified issue with button being too close to window edge.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,7 +391,7 @@ footer{
     border-radius: 0;
     padding-left: 2rem;
     padding-right: 2rem;
-    margin-right: 0.115rem;
+    margin-right: 0.9rem;
 }
 
 .ModalCustBtn:hover{
@@ -414,6 +414,7 @@ footer{
     border-radius: 0;
     padding-right: 1rem;
     padding-left: 1rem;
+    margin-right: 0.5rem;    
 }
 
 .ModalCustBtnD:hover{
